[package]
name = "syscall-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
bpf-common = { path = "../../bpf-common" }
log = "0.4.14"
pulsar-core = { path = "../../pulsar-core" }

tokio = { version = "1", features = ["full"] }

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }

[dev-dependencies]
bpf-common = { path = "../../bpf-common", features = ["test-utils"] }
