[package]
name = "syscall-monitor"
version = "0.1.0"
license = "Apache-2.0 with BPF probe under GPL-2.0"
edition = "2021"

[dependencies]
bpf-common = { path = "../../bpf-common" }
pulsar-core = { path = "../../pulsar-core" }

log = "0.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }

[dev-dependencies]
bpf-common = { path = "../../bpf-common", features = ["test-utils"] }
