[package]
name = "desktop-notifier"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pulsar-core = { workspace = true }
bpf-common = { workspace = true }

tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
anyhow = { workspace = true }
