[package]
name = "desktop-notifier"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pulsar-core = { path = "../../pulsar-core" }
bpf-common = { path = "../../bpf-common" }

tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0.68"
async-trait = "0.1.73"
