[package]
name = "file-system-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = ["bpf-common/test-utils"]

[dependencies]
bpf-common = { path = "../../bpf-common" }
pulsar-core = { path = "../../pulsar-core" }

nix = "0.26.2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
async-trait = "0.1.73"

[build-dependencies]
bpf-builder = { path = "../../bpf-builder" }
