[package]
name = "file-system-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = [
  "bpf-common/test-suite",
  "pulsar-core/test-suite"
]

[dependencies]
bpf-common = { workspace = true }
pulsar-core = { workspace = true }

nix = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }

[build-dependencies]
bpf-builder = { workspace = true }
