[package]
name = "file-system-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = ["ebpf-common/test-utils"]

[dependencies]
ebpf-common = { workspace = true }
pulsar-core = { workspace = true }

nix = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }

[build-dependencies]
ebpf-builder = { workspace = true }
