[package]
name = "logger"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pulsar-core = { path = "../../pulsar-core" }
bpf-common = { path = "../../bpf-common" }

tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4.23", features = ["std"], default-features = false }
async-trait = "0.1.73"
