[package]
name = "network-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = ["bpf-common/test-utils"]

[dependencies]
aya-ebpf-bindings = { workspace = true }
aya-obj = { workspace = true }
bpf-common = { workspace = true }
pulsar-core = { workspace = true }

tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
nix = { workspace = true }
dns-parser = { workspace = true }

[build-dependencies]
bpf-builder = { workspace = true }
