[package]
name = "process-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = [ "bpf-common/test-utils" ]

[dependencies]
bpf-common = { workspace = true }
bpf-filtering = { workspace = true }
pulsar-core = { workspace = true }

tokio = { workspace = true, features = ["full"] }
nix = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }

[build-dependencies]
bpf-builder = { workspace = true }
