[package]
name = "process-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = [ "ebpf-common/test-utils" ]

[dependencies]
ebpf-common = { workspace = true }
ebpf-filtering = { workspace = true }
pulsar-core = { workspace = true }

tokio = { workspace = true, features = ["full"] }
nix = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }

[build-dependencies]
ebpf-builder = { workspace = true }
